# nebula-chat

./: .gitignore  ANDROID_BUILD_GUIDE.md  ANDROID_OPTIONS.md  ARCHIVE_2026-02-23.md  BUILD_MACOS.md  CHECK_STATUS.md  DEBUG_CONNECTION.md  DEBUG_GUIDE.md  DEV_PROGRESS.md  FIX_SUMMARY.md  FRONTEND_GUIDE.md  HOW_TO_FIND_PEER_ID.md  P2P_IMPLEMENTATION.md  P2P_INTEGRATION_STATUS.md  P2P_REAL_TRANSPORT.md  PEER_ID_NOTE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_ANDROID_SETUP.md  QUICK_TEST.md  README_TESTING.md  RUN_TWO_INSTANCES.md  SESSION_SUMMARY_2026-02-23.md  TASKS_COMPLETED.md  TESTING_SESSION.md  TEST_DUAL_INSTANCES.md  TEST_STATUS.md  dev-log.txt  package-lock.json  package.json  run-instance1.bat  run-instance2.bat  run-second-instance.bat  start-dual-instances.bat  start-instance2.bat  tailwind.config.js  vite.config.ts  vite.config2.json
.github/workflows/: android.yml  build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.bat  tauri.conf.instance2.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: placeholder.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  config.rs  contacts.rs  crypto.rs  mod.rs  p2p.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/p2p/: mod.rs
src/components/: ChatInterface.tsx  ChatLayout.tsx  Onboarding.tsx
src/lib/: api.ts  types.ts
